--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     data-title="Сбор образа на мероприятие"
                     data-price="<li>от 15.000₽ (в зависимости от ваших пожеланий) </li>"
                     data-text-first="Подбор образа на мероприятие, в соответствии с дресс кодом, тематикой и вашими личными предпочтениями"
-                    data-text-second="Дополнительно: подбор макияжа и прически, а также поиск мастеров, <br/>которые смогут это выполнить"
+                    data-text-second="Дополнительно: <br/> подбор макияжа и прически, а также поиск мастеров, <br/>которые смогут это выполнить"
                     >
                     <img class="service-img" src="images/services/events-stylizing.jpg" alt="events-stylizing">
                     <p class="service-text-wrapper service-text">Сбор образа на мероприятие</p>
