--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                         <p class="who-i-am-text">
                             Я Алина, стилист из Санкт-Петербурга, работаю офлайн<br>
                             Санкт-Петербург и Москва, а также онлайн.
+                            <span class="more-text">
+                                В мои услуги входит: разбор гардероба, подбор собственного стиля, 
+                                подбор вещей под выбранный стиль, долгосрочное сотрудничество в качестве вашего стилиста, 
+                                стилизации и продюсирование съемок, сбор образа на мероприятие, 
+                                шопинг сопровождение, стилизация съемок для брендов.
+                            </span>
                         </p>
                         <img class="caret" src="images/icons/caret-down.svg" alt="">
                     </div>
@@ -284,6 +290,14 @@
                 <a href="#">alsttp@mail.ru</a>
                 <a href="#">tg: alsttpp</a>
                 <a href="#">ig: inapllanetka</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal" id="portfolioModal">
+        <div class="modal-overlay"></div>
+        <div class="portfolio-scroll">
+            <div class="portfolio-grid">
             </div>
         </div>
     </div>
