--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
     <footer id="contacts">
         <div class="contacts-header">КОНТАКТЫ:</div>
         <div class="contacts-footer">
-            <a href="#">alsttp@mail.ru</a>
-            <a href="#">tg: alsttpp</a>
-            <a href="#">ig: inapllanetka</a>
+            <a href="mailto:alsttp@mail.ru">alsttp@mail.ru</a>
+            <a href="https://t.me/inaplanetka">tg: alsttpp</a>
+            <a href="https://www.instagram.com/inapllanetka/">ig: inapllanetka</a>
         </div>
     </footer>
 
@@ -287,15 +287,18 @@
 
 
             <div class="modal-footer">
-                <a href="#">alsttp@mail.ru</a>
-                <a href="#">tg: alsttpp</a>
-                <a href="#">ig: inapllanetka</a>
+                <a href="mailto:alsttp@mail.ru">alsttp@mail.ru</a>
+                <a href="https://t.me/inaplanetka">tg: alsttpp</a>
+                <a href="https://www.instagram.com/inapllanetka/">ig: inapllanetka</a>
             </div>
         </div>
     </div>
 
     <div class="portfolio-modal" id="portfolioModal">
         <div class="modal-overlay"></div>
+        <div class="portfolio-close-wrapper">
+            <button class="portfolio-modal-close">&times;</button>
+        </div>
         <div class="portfolio-scroll">
             <div class="portfolio-grid"></div>
         </div>
