--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </section>
         
-        <button id="uploadBtn" class="uploadBtn">Upload photo</button>
+        <button id="uploadBtn" class="uploadBtn" style="display:none;">Upload photo</button>
         <section id="portfolio" class="portfolio-wrapper">
             <div class="portfolio">
                 <div class="portfolio-text">ПОРТФОЛИО</div>
